# kindle_highlights_scraper

./: .env.example  .gitignore  README.md  main.py  metadata_enrichment.py  pyproject.toml  pyzotero-etl.py  query_db.py  scraper.py
