[project]
name = "kindle-highlights-scraper"
version = "0.1.0"
description = "Use Python Playwright to get your highlights and notes from the Amazon Kindle notebook and save them to SQLite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.0",
    "pyzotero>=1.6.11",
]
